test/visibility/private/constants/accessSibling.good
accessSibling.chpl:7: In function 'main':
accessSibling.chpl:8: error: Cannot access 'foo', 'foo' is private to 'M1'
